# illinois-project

./: .env.example  .gitignore  DEPLOYMENT.md  LOCAL_SETUP.md  PROJECT_PRESENTATION.md  README.md  demo_app.py  demo_app_fixed.py  demo_final.py  pyproject.toml  render.yaml  requirements.txt  streamlit.toml
.devcontainer/: devcontainer.json
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  teams.py
backend/app/services/: __init__.py  barttorvik_service.py
frontend/: requirements.txt  streamlit_app.py
