[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "illinois-basketball-scouting"
version = "1.0.0"
description = "College Basketball Opponent Scouting Dashboard"
authors = [
    {name = "Illinois Basketball Team", email = "team@illinois.edu"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Sports Analysts",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core Streamlit
    "streamlit==1.28.2",
    
    # Core FastAPI dependencies
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    
    # Database and ORM
    "supabase==2.0.2",
    "sqlalchemy==2.0.23",
    
    # HTTP client for external APIs
    "httpx==0.25.2",
    "requests==2.31.0",
    
    # Data manipulation and analysis
    "pandas==2.1.4",
    "numpy==1.25.2",
    
    # Data visualization
    "plotly==5.17.0",
    "matplotlib==3.8.2",
    "seaborn==0.12.2",
    
    # Additional Streamlit components
    "streamlit-aggrid==0.3.4",
    "streamlit-option-menu==0.3.6",
    
    # Date/time handling
    "python-dateutil==2.8.2",
    
    # Environment variables
    "python-dotenv==1.0.0",
    
    # Image processing (for team logos, etc.)
    "Pillow==10.1.0",
    
    # Excel file handling
    "openpyxl==3.1.2",
    "xlsxwriter==3.1.9",
    
    # AI/ML for automated reports
    "openai==1.3.7",
    
    # Data validation
    "email-validator==2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/illinois-basketball/scouting-dashboard"
Repository = "https://github.com/illinois-basketball/scouting-dashboard"
Issues = "https://github.com/illinois-basketball/scouting-dashboard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["frontend*", "backend*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 